--- a/kontrol.html
+++ b/kontrol.html
@@ -37,7 +37,7 @@
 <br>
 
 
-<h4><P2>Автор : Кандрунин Владимир Сергеевич</P2></h4>
+<h4><P2>Автор : Кандрунин Владимир Сергеевич<br> Кутинов Илья Михайлович<br> Костянов Алексей Сергеевич</P2></h4>
 <h4><P2>Источники : <a href= "https://www.audit-it.ru/terms/taxation/nalog.html">https://www.audit-it.ru/terms/taxation/nalog.html(электронный ресурс)</a></P2></h4>
 <h4><P2><a href="http://tic.tsu.ru/www/uploads/nalog/page11.html">http://tic.tsu.ru/www/uploads/nalog/page11.html(электронный ресурс)</a></P2></h4>
    <h4><P2><a href="https://yr.mfua.ru/studentu/files/UMM/UMP_Nalogi_i_nalogooblajenie_YF_MFUA_2014_(Lazurina_Lazurin_Urchenko).pdf" >https://yr.mfua.ru/studentu/files/UMM/UMP_Nalogi_i_nalogooblajenie_YF_MFUA_2014_(Lazurina_Lazurin_Urchenko).pdf(pdf файл)</a></P2></h4>
